# aws-test-event-library

./: README.md  pyproject.toml
aws_event_test_library/events/: sqs_event.py
aws_test_event_library/events/: sqs_event.py
tests/: test_aws_event_test_library.py
tests/unit/: test_sqs_event.py
