[tool.poetry]
name = "aws-test-event-library"
version = "0.1.0"
description = "A library for test events in AWS"
authors = ["Maurice Mertens <maurice@mdotmertens.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^2.18.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
